Slight UI improvement, add 04th of January data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,12 @@
 
 <!--<mat-slide-toggle>Toggle me!</mat-slide-toggle>-->
 
+<mat-card>
+  <mat-card-content>History over the last 7 days.</mat-card-content>
+  <mat-card-content>Last history generated on {{selectedDate}}</mat-card-content>
+</mat-card>
+
+
 <!-- Button to clear selection -->
 <!--<button (click)="clearSelection()">Clear Selection</button>-->
 <mat-form-field appearance="fill">
