--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,9 @@
 @import 'ag-grid-community/styles/ag-theme-alpine.css';
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
 
+.ag-theme-alpine {
+  --ag-odd-row-background-color: rgb(0, 0, 0, 0.03);
+}
 
 html, body {
    height: 100%;
