Display fan toolkit code for ffxiv items link when hovering

--- a/src/app/dialog-overview-example-dialog.html
+++ b/src/app/dialog-overview-example-dialog.html
@@ -1,10 +1,7 @@
-<h1 mat-dialog-title>{{data.name}}</h1>
+<h1 mat-dialog-title><a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/{{data['lodestoneId']}}" class="eorzeadb_link">{{data.name}}</a></h1>
 <div mat-dialog-content>
     <a href="https://universalis.app/market/{{data.id}}}">Universalis</a>
   <div>
     Average Price: {{data['averagePrice']}}
   </div>
-  <!--  TODO: WIP: Add hover linking to lodestone information-->
-  <!--  <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/b2cab67854f/" class="eorzeadb_link">Dreadwyrm Blade</a>-->
-
 </div>
