--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,5 +14,8 @@ html, body {
    -webkit-overflow-scrolling: touch;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #202020 !important;
+}
