--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,7 +45,7 @@
 
 <ag-grid-angular
    style="width: 100%; height: 100%"
-   class="ag-theme-alpine"
+   class="ag-theme-alpine-dark"
    [columnDefs]="columnDefs"
    [defaultColDef]="defaultColDef"
    [rowData]="rowData$"
